# geartrain

./: .gitignore  WRITING_STYLE.md  agents.md  pyproject.toml
.claude/: settings.json
.geartrain/: workspace.yaml
.geartrain/agents/: coder.agent.yaml  lead.agent.yaml
.geartrain/engines/: local.engine.yaml
.geartrain/logs/: geartrain-dev.md
.geartrain/state/: engine.md
.geartrain/workflows/: geartrain-dev.workflow.yaml
docs/: 01-vision.md  02-architecture.md  03-core-concepts.md  04-memory-system.md  05-example-workflow-software-dev.md  06-mvp-scope-and-plan.md  07-design-notes.md  08-definition-contracts.md  09-runnable-version.md  09-ui-and-observability.md  README.md
geartrain/: __init__.py  cli.py
geartrain/agents/: __init__.py  cli_runner.py  codex.py  factory.py  (+5 more)
tests/: conftest.py  github_fakes.py  observability_helpers.py  stub_chat_model.py  test_agent_command.py  test_agents.py  test_cli.py  test_cli_runner.py  test_config_models.py  test_context_builder.py  test_event_streaming.py  test_github_client.py  test_github_integration.py  test_github_tools.py  test_http_service.py  test_interpolation.py  test_langchain_agent.py  test_langchain_runner.py  test_langchain_tools.py  test_llm_resolution.py  test_memory_guardrail.py  test_memory_store.py  test_memory_tools.py  test_observability_contract.py  test_run_api.py  test_run_summary.py  test_sandbox_memory.py  test_smoke.py  test_state.py  test_tool_memory_events.py  test_validation.py  test_work_tasks.py  test_workflow_engine.py  test_workflow_runnable.py
work/: README.md  ROADMAP.md  SPEC.md
(+127 files in other folders)
