[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geartrain"
version = "0.1.0"
description = "Local AI engineering agent orchestrator"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
    "langchain>=1.0",
    "langchain-core>=1.0",
    "requests>=2.31",
]

[tool.setuptools.packages.find]
include = ["geartrain*"]

[project.scripts]
geartrain = "geartrain.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
